@startuml SmartInfrastructureValidator_ERD
' Hide class icons and use orthogonal line routing
hide circle
skinparam linetype ortho

' Entity definitions
entity "network_node" as network_node {
  * node_id : UUID <<PK>>
  --
  node_name : String
  topology_path : Ltree <<Network topology path (e.g. PL.WRO.SITE_A.gNodeB_01)>>
  node_type : Enum <<BTS, NodeB, eNodeB, gNodeB, ng_eNodeB>>
  ip_address : String
  max_throughput_mbps : Integer
  location : Geometry <<PostGIS Point (replaces separate latitude/longitude)>>
  vendor_config : JSONB <<Hardware-specific configuration per generation>>
  created_at : Timestamp
}

entity "node_status_log" as node_status_log {
  * timestamp : Timestamp <<PK>> <<Measurement time (partitioning key)>>
  * node_id : UUID <<PK, FK>> <<Foreign key to network_node>>
  --
  is_online : Boolean
  cpu_temperature_c : Float
  connected_users : Integer
  current_throughput_mbps : Float
}

entity "hardware_component" as hardware_component {
  * component_id : UUID <<PK>>
  --
  node_id : UUID <<FK>>
  component_type : Enum <<ANTENNA, TRANSCEIVER, COOLING_FAN, POWER_SUPPLY>>
  status : Enum <<OK, DEGRADED, FAILED>>
}

entity "active_alarm" as active_alarm {
  * alarm_id : UUID <<PK>>
  --
  node_id : UUID <<FK>>
  component_id : UUID <<FK>> <<Nullable>>
  severity : Enum <<WARNING, MINOR, MAJOR, CRITICAL>>
  description : String
  raised_at : Timestamp
  cleared_at : Timestamp <<Nullable>>
}

' Relationships
network_node ||--o{ node_status_log : "generates (TimescaleDB Hypertable)"
network_node ||--|{ hardware_component : "contains"
network_node ||--o{ active_alarm : "has"
hardware_component ||--o{ active_alarm : "causes"

@enduml